// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`клик на кнопку "купить" откроет модал оплаты если нет квоты 1`] = `
Array [
  Object {
    "payload": Object {
      "params": Object {
        "category": "cars",
        "from": "desktop_chat_widget",
        "offerId": "offer-id",
        "product": Array [
          Object {
            "count": 1,
            "name": "reports",
          },
        ],
        "purchaseCount": 1,
        "section": "used",
      },
    },
    "type": 39,
  },
]
`;

exports[`клик на кнопку "купить" отправит вас лог 1`] = `
Array [
  Object {
    "event": "click",
    "original_price": 777,
    "price": 777,
  },
]
`;

exports[`клик на кнопку "купить" отправит метрику 1`] = `
Array [
  "metrika-id",
  Array [
    "chat_widgets",
    "history-reports",
    "user",
    "clicks",
    "vin",
  ],
]
`;

exports[`маунт компонент виден отправит метрику и вас лог 1`] = `
Array [
  Object {
    "event": "show",
    "original_price": 777,
    "price": 777,
  },
]
`;

exports[`маунт компонент виден отправит метрику и вас лог 2`] = `
Array [
  "metrika-id",
  Array [
    "chat_widgets",
    "history-reports",
    "user",
    "shows",
    "vin",
  ],
]
`;
